2.2.7
-----
- Properly parse "Log data" field, newly introduced in Duplicati circa November 2018 (Issue #112)
- Added "Duplicati version" field option to report. Can be helpful in discovering when one of your systems is behind in Duplicati updates (Issue #114)
- Updated database schema, now on version 1.0.3. Program will (should) automaticaly upgrade older DB versions to the new format.

2.2.6
-----
- Enable setting emails to read/seen after processing - IMAP only (Issue #111)

2.2.5
-----
- Fix POP3 headers to convert them to IMAP style for processing (Issue #105)
- Fix several stupid spelling errors (Issue #106 & others)
- Fix issue where POP3 server would fail keepalive check due to bad comparison of return from server.noop() call (Issue #107)
- Updated documents to include advice for setting POP3 "Leave messages on servr" option (Issue #107)
- Option to mask sensitive data from log files: [main] masksensitive (Issue #109)
- Fix issue where POP3 email causes log writing to crash system (Issue #108)

2.2.4
-----
- Added backup duration to reports (Issue #102)
     - Altered database schema to accommodate backup duration in reports. Will require (automatic) DB upgrade. BACKUP YOUR DATABSE AND .RC FILE BEFORE EXECUTING!
     - Added durationzeroes option in [report] section to determine if zero units should be displayed in the time duration
- Updated report footer to add program version number
- Fixed an issue where the colon (:) is used as part of the subject line. (Issue #104)

2.2.3
-----
- Fixed bug where "Not Seen" email was being sent even if backupset was listed as offline (Issue #94)
- Fixed Unhandled Exception bug on CloseEverythingAndExit()
- Added feature to truncate message, warning, and error fields generated by backup jobs (Issue #97)
- Added support for Apprise notifications (https://github.com/caronc/apprise)
- If you specify -x on the command line you no longer need to specify valid outgong email server and account information in the .rc file. 